<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tool_bar_height"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/locations"
                android:layout_marginBottom="@dimen/padding_half"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@id/toolbar" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_settings"
                android:layout_width="@dimen/image_small_btn"
                android:layout_height="@dimen/image_small_btn"
                android:layout_marginEnd="@dimen/padding_half"
                android:layout_marginBottom="@dimen/padding_half"
                android:padding="@dimen/padding_quarter"
                app:layout_constraintBottom_toBottomOf="@id/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_settings_24"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_favourites"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:paddingTop="@dimen/padding_quarter"
                android:paddingBottom="@dimen/recycler_bottom_padding"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                tools:itemCount="10"
                tools:listitem="@layout/item_favourite" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/empty_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/empty_desc"
                android:visibility="gone"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_add_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/padding"
            android:text="@string/add_new_city" />

        <include
            android:id="@+id/loader"
            layout="@layout/layout_loading" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>